<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yon</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<!-- button labels -->
	<string name="btn_confirm">确认</string>
	<string name="btn_cancel">取消</string>
	<string name="btn_comment">写评论</string>
	<string name="btn_addfans">加关注</string>

	<!-- settings -->
	<string name="config_sign">修改签名</string>
	<string name="config_face">更换头像</string>
	<!-- toast prompts -->
	<string name="msg_loginfail">用户名或密码错误</string>
	<string name="msg_signuppasserror">密码与确认密码不匹配</string>
	<string name="msg_signupok">注册成功,确认后返回登录界面</string>
	<string name="msg_signupfail">用户名已存在</string>
	<string name="msg_signupfailphone">手机号码已存在</string>
	<string name="msg_wrongphone">手机号码不存在</string>
	<string name="msg_phoneempty">手机号码不能为空</string>
	<string name="msg_networkerror">网络不给力，请稍后再试</string>
	<string name="msg_wrongsmscode">验证码错误</string>
	<string name="msg_smscodeerror">验证码不能为空，必须大于%d位</string>
	<string name="msg_smscodetimesup">验证码过期，请重新获取</string>
	<string name="msg_resetpassok">重置成功,确认后返回登录界面</string>
	<string name="msg_resetpassfail">重置失败，服务器繁忙</string>
	<string name="msg_resetoldpasserror">旧密码错误</string>
	
	<string name="msg_uploads_disabled">File uploads are disabled.</string>
	<string name="msg_choose_upload">Choose file for upload</string>
	
	<!-- UI labels-->
	<string name="login_title">用户登录</string>
	<string name="login_username">用户名</string>
	<string name="login_password">密码</string>
	<string name="login_remember">记住密码</string>
	<string name="login_forgot">忘记密码?</string>
	<string name="login_signup">注册</string>
	<string name="login_submit">登录</string>
	<string name="edit_submit">保存</string>
	<string name="post_comment">评论</string>	
	<string name="reset_title">重置密码</string>
	<string name="reset_oldpass">旧密码</string>
	<string name="reset_newpass">新密码</string>
	<string name="reset_newpassconfirm">确认新密码</string>
	<string name="reset_submit">更新密码</string>
	
	<string name="hint_username">请输入用户名</string>
	<string name="hint_oldpass">请输入旧密码</string>
	<string name="hint_password">请输入密码</string>
	<string name="hint_passconfirm">请输入确认密码</string>
	<string name="hint_cellphone">请输入有效的手机号码</string>
	<string name="hint_smscode">短信验证码</string>
	
	<string name="signup_title">用户注册</string>
	<string name="signup_confirm_pass">确认密码</string>
	<string name="signup_cellphone">手机号码</string>
	<string name="signup_submit">注册</string>
	
	<string name="forgot_title">密码找回</string>
	<string name="forgot_get_sms">获取验证码</string>
	<string name="forgot_reset_pass">重置密码</string>
	<string name="forgot_resend">%d秒后重发</string>
	
	<!-- pull to refresh list view messages -->
	<string name="ptr_pull_to_refresh">Pull to refresh</string>
    <string name="ptr_release_to_refresh">Release to refresh</string>
    <string name="ptr_refreshing">Refreshing…</string>
    <string name="ptr_last_updated">Updated: %1$s</string>
    
</resources>
