<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	android:padding="30dip" >
	<TextView 
		android:layout_width="wrap_content" 
		android:textAppearance="?android:attr/textAppearanceLarge" 
		android:layout_height="wrap_content" 
		android:layout_gravity="center_horizontal" 
		android:text="@string/login_title" 
		android:layout_margin="20dip" 
		android:textSize="10pt"/>
	<RelativeLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content">

		<EditText 
		    android:id="@+id/app_login_edit_name" 
		    android:inputType="text"
		    android:gravity="center"  
		    android:textSize="9pt" 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:hint="@string/hint_username" 
			android:text="@string/login_username" 
			/>
	</RelativeLayout>
	<RelativeLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content">

		<EditText 
		    android:id="@+id/app_login_edit_pass"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:gravity="center"
			android:inputType="text" 
			android:textSize="9pt" 
			android:textAppearance="?android:attr/textAppearanceLarge" 
			android:hint="@string/hint_password"
			android:text="@string/login_password" 
			 
			/>
	</RelativeLayout>
	<CheckBox 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:text="@string/login_remember" 
		android:id="@+id/app_login_check_remember" 
		/>
	<Button 
		android:id="@+id/app_login_btn_submit" 
		android:text="@string/login_submit" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:focusable="true"/>
	<RelativeLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:layout_marginTop="30dip">

	    <Button 
			android:id="@+id/app_login_btn_forgot" 
			android:text="@string/login_forgot" 
			android:layout_width="100dip" 
			android:layout_height="40dip"
			android:textSize="14sp" 
			android:layout_alignParentLeft="true"
			android:layout_centerVertical="true"
			/>
		<Button 
			android:id="@+id/app_login_btn_signup" 
			android:text="@string/login_signup" 
			android:layout_width="100dip" 
			android:layout_height="40dip" 
			android:layout_alignParentRight="true"
			android:layout_centerVertical="true"
			/>
	</RelativeLayout>
</LinearLayout>
