<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="match_parent" 
	android:padding="30dip" >
	<TextView 
		android:layout_width="wrap_content" 
		android:textAppearance="?android:attr/textAppearanceLarge" 
		android:layout_height="wrap_content" 
		android:layout_gravity="center_horizontal" 
		android:text="@string/signup_title" 
		android:layout_margin="20dip" 
		android:textSize="10pt"/>
	<RelativeLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content">

		<EditText 
		    android:id="@+id/app_signup_edit_name" 
		    android:inputType="text"
		    android:gravity="center"  
		    android:textSize="9pt" 
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:textAppearance="?android:attr/textAppearanceLarge" 			
			android:text="@string/login_username" 

			/>
	</RelativeLayout>
	<RelativeLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content">

		<EditText 
		    android:id="@+id/app_signup_edit_pass"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:gravity="center"
			android:inputType="text" 
			android:textSize="9pt" 
			android:textAppearance="?android:attr/textAppearanceLarge" 
			android:text="@string/login_password" 
			 
			/>
	</RelativeLayout>
	<RelativeLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content">

		<EditText 
		    android:id="@+id/app_signup_edit_confirm_pass"
			android:layout_width="match_parent" 
			android:layout_height="wrap_content" 
			android:gravity="center"
			android:inputType="text" 
			android:textSize="9pt" 
			android:textAppearance="?android:attr/textAppearanceLarge" 
			android:text="@string/signup_confirm_pass" 
			 
			/>
	</RelativeLayout>

	<RelativeLayout 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content">

		<EditText
		    android:id="@+id/app_signup_edit_cellphone"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:inputType="text"
		    android:text="@string/signup_cellphone"
		    android:textAppearance="?android:attr/textAppearanceLarge"
		    android:textSize="9pt" />

	</RelativeLayout>
	
	<Button 
		android:id="@+id/app_signup_btn_submit" 
		android:text="@string/login_submit" 
		android:layout_width="match_parent" 
		android:layout_height="wrap_content" 
		android:focusable="true"/>

</LinearLayout>
